--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -391,12 +391,12 @@ In the following, we provide examples to illustrate how this can be achieved for
 # ToDo. 
 ```
 
-#### A. [University of Freiburg](https://www.uni-freiburg.de/), Germany: 
+#### A. [University of Freiburg](https://www.uni-freiburg.de), Germany: 
 <img src = "../inst/pix/logo_freiburg.png" align = "right" width = "120px" alt = "Uni Freiburg" style = "border:10;"/> 
 
-The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de/) provides fairly extensive information on its corporate color scheme (available [here](https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt) and [here](https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben)). 
+The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de) provides fairly extensive information on its corporate color scheme (available [here](https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt) and [here](https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben)). 
 Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
-As the [University of Freiburg](https://www.uni-freiburg.de/) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
+As the [University of Freiburg](https://www.uni-freiburg.de) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
 
 ```{r freiburg-cols, fig.width = 7, fig.asp = .618, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
@@ -486,10 +486,10 @@ seecol(pal_princeton_1,  # view color palette
        col_bg = "grey90", title = "Color palette of Princeton University")
 ```
 
-#### C. [Max Planck Society](https://www.mpg.de/), Germany: 
+#### C. [Max Planck Society](https://www.mpg.de/de), Germany: 
 <img src = "../inst/pix/logo_MPG.png" align = "right" alt = "MPG" width = "150px" style = "border:10;"/>
 
-The CD manual (available [here](https://docplayer.org/2328711-Max-planck-institut-das-erscheinungsbild-der-max-planck-gesellschaft-4-ueberarbeitete-auflage.html)) of the [Max Planck Society](https://www.mpg.de/) specifies the use of 2&nbsp;primary colors: 
+The CD manual (available [here](https://docplayer.org/2328711-Max-planck-institut-das-erscheinungsbild-der-max-planck-gesellschaft-4-ueberarbeitete-auflage.html)) of the [Max Planck Society](https://www.mpg.de/de) specifies the use of 2&nbsp;primary colors: 
 
 - Green as Pantone 328: Using the PANTONE&trade; color finder at <https://www.pantone.com/color-finder/328-C> yields the following color values:
 
