--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -380,7 +380,7 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
 
 ## Other institutions 
 
-The color palettes included in the **unikn** package are based on the CD manual of the [University of Konstanz](https://uni-konstanz.de/), Germany. 
+The color palettes included in the **unikn** package are based on the CD manual of the [University of Konstanz](https://www.uni-konstanz.de/), Germany. 
 However, the functionality provided by the package makes it easy and straightforward to define and use your own color scales. 
 In the following, we provide examples to illustrate how this can be achieved for other institutions. 
 
@@ -562,9 +562,9 @@ The following versions of **unikn** and corresponding resources are currently av
 Type:                    | Version:           | URL:                           |         
 :------------------------|:-------------------|:-------------------------------| 
 A. **unikn** (R package): | [Release version](https://CRAN.R-project.org/package=unikn) | <https://CRAN.R-project.org/package=unikn> |
-    &nbsp;                | [Development version](https://github.com/hneth/unikn)       | <https://github.com/hneth/unikn> | 
-B. Online documentation:  | [Release version](https://hneth.github.io/unikn)            | <https://hneth.github.io/unikn> | 
-    &nbsp;                | [Development version](https://hneth.github.io/unikn/dev)    | <https://hneth.github.io/unikn/dev> | 
+    &nbsp;                | [Development version](https://github.com/hneth/unikn/)       | <https://github.com/hneth/unikn/> | 
+B. Online documentation:  | [Release version](https://hneth.github.io/unikn/)            | <https://hneth.github.io/unikn/> | 
+    &nbsp;                | [Development version](https://hneth.github.io/unikn/dev/)    | <https://hneth.github.io/unikn/dev/> | 
 
 
 ## Vignettes
