--- a/vignettes/text.Rmd
+++ b/vignettes/text.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Text boxes and decorations"
 author: "SPDS, uni.kn"
-date: "2020 09 14"
+date: "2020 11 01"
 output: 
   rmarkdown::html_vignette: 
     fig_caption: yes
@@ -280,7 +280,23 @@ post(labels = "R", y = .35,
      cex = 8, font = 2, new_plot = "xbox")
 ```
 
-Another use of `post` is to create an image that provides contact details: 
+<!-- Creating course logos: -->
+
+```{r post-logo-hide, echo = FALSE, eval = FALSE}
+# To be viewed/saved at 250 x 250 pixels:
+
+# ds4psy course logo: 
+post(labels = "ds4psy", x = .05, y = .34, 
+     col = "white", col_bg = pal_seeblau[[5]],
+     cex = 2.2, font = 2, new_plot = "xbox")
+
+# i2ds course logo: 
+post(labels = "i2ds", x = .05, y = .34, 
+     col = "white", col_bg = pal_pinky[[4]],
+     cex = 2.2, font = 2, new_plot = "xbox")
+```
+
+Another potential use of `post` is for creating images providing contact details: 
 
 ```{r post-address, echo = TRUE, fig.width = 3, fig.height = 3}
 address <- c("Dr. B. F. Skinner", " ",
