--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -24,8 +24,8 @@ knitr::opts_chunk$set(echo = TRUE,
                message = FALSE,
                warning = FALSE,
                ## Default figure options:
-               # fig.width = 7.2, 
-               # fig.asp = .618, # golden ratio
+               # fig.width = 6, 
+               # fig.asp = .8 # .618, # golden ratio
                # out.width = "75%",
                fig.align = "center"
                )
@@ -88,13 +88,13 @@ Some special keywords within the **unikn** package denote sets of color palettes
 
 Viewing _all_ available color palettes:
 
-```{r seecol-unikn-all, fig.width = 7, fig.height = 6, fig.align = 'center'}
+```{r seecol-unikn-all, fig.width = 6, fig.height = 5, fig.align = 'center'}
 seecol("unikn_all")  # same as seecol("all")
 ```
 
 1. three _basic_ color palettes:
 
-```{r seecol-unikn-basic-2, fig.width = 7, fig.height = 2.5, fig.align = 'center'}
+```{r seecol-unikn-basic-2, fig.width = 6, fig.height = 2, fig.align = 'center'}
 seecol("unikn_basic")
 ```
 
@@ -102,19 +102,19 @@ Note, that `pal_unikn_web` and `pal_unikn_ppt` are almost identical, but differ 
 
 2. three _paired_ color palettes:
 
-```{r seecol-pair-all, fig.width = 7, fig.height = 2.5, fig.align = 'center'}
+```{r seecol-pair-all, fig.width = 6, fig.height = 2.5, fig.align = 'center'}
 seecol("pair_all")
 ```
 
 3. all _preferred_ colors from the spectrum and their respective _gradients_:
 
-```{r seecol-pref-all, fig.width = 7, fig.height = 4, fig.align = 'center'}
+```{r seecol-pref-all, fig.width = 6, fig.height = 3.5, fig.align = 'center'}
 seecol("pref_all")
 ```
 
 4. only the pre-defined color _gradients_:
 
-```{r seecol-grad-all-2, fig.width = 7, fig.height = 3.5, fig.align = 'center'}
+```{r seecol-grad-all-2, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 seecol("grad_all")
 ```
 
@@ -122,7 +122,7 @@ seecol("grad_all")
 
 When the `pal` argument of the `seecol()` function specifies a single color palette, the function plots a more detailed view of this particular color palette: 
 
-```{r unikn-palette, fig.width = 6, fig.asp = .75, fig.align = 'center'}
+```{r unikn-palette, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 seecol(pal_unikn)  # view details of pal_unikn 
 ```
 
@@ -135,20 +135,20 @@ The detailed overview of a single color palette provides us with
 
 A typical workflow comprises first _seeing_ a color palette, then saving it, and using it in a plot.  
 
-```{r save-seecol, fig.width = 6, fig.asp = .75, fig.align = 'center'}
+```{r save-seecol, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 my_pal <- seecol(pal_unikn_light)  # view details of AND save pal_unikn_light to my_pal  
 ```
 
 After saving the color palette you can use the palette object in your plot: 
 
-```{r my-pal-example, fig.width = 6, fig.asp = .618, fig.align = 'center'}
+```{r my-pal-example, fig.width = 5, fig.asp = .65, fig.align = 'center'}
 barplot(1/sqrt(1:10), col = my_pal)  # use my_pal in a plot
 ```
 
 Note that `seecol()` _invisibly_ returns the color palette.  
 Thus, the following will only plot the palette without doing anything else with the color vector:
 
-```{r invisible-seecol, fig.width = 6, fig.asp = .75, fig.align = 'center'}
+```{r invisible-seecol, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 seecol(pal_bordeaux)
 ```
 
@@ -162,9 +162,9 @@ The `seecol()` function provides some aesthetic parameters for adjusting how col
 
 Examples:
 
-```{r seecol-aesthetic-parameters, fig.width = 6, fig.asp = .75, fig.align = 'center'}
-seecol("grad_all", col_brd = "black", lwd_brd = 2, title = "Color gradients with black borders")
-seecol(pal_seegruen, col_brd = "white", lwd_brd = 10, title = "A color palette with white borders")
+```{r seecol-aesthetic-parameters, fig.width = 5, fig.asp = .8, fig.align = 'center'}
+seecol("grad_all", col_brd = "black", lwd_brd = 1, title = "Color gradients (with black borders)")
+seecol(pal_seegruen, col_brd = "white", lwd_brd = 10, title = "A color palette (with white borders)")
 ```
 
 
@@ -172,9 +172,9 @@ seecol(pal_seegruen, col_brd = "white", lwd_brd = 10, title = "A color palette w
 
 The `usecol()` function allows directly using a color palette in a plot (i.e., without first viewing it).
 `usecol()` corresponds to `seecol()` by taking the same main arguments (`pal` and `n`). 
-However, as its purpose is _using_ the colors specified by `pal`, rather than plotting (or _seeing_) them, its `pal` argument typically contains only 1&nbsp;color palette: 
+However, as its purpose is _using_ the colors specified by `pal`, rather than plotting (or _seeing_) them, its `pal`\ argument typically contains only one color palette: 
 
-```{r usecol-default-use, fig.width = 6, fig.asp = .618, fig.align = 'center'}
+```{r usecol-default-use, fig.width = 5, fig.asp = .65, fig.align = 'center'}
 # Using a color palette:
 barplot(1/sqrt(1:11), col = usecol(pal_unikn))
 ```
@@ -185,7 +185,7 @@ Note that the `seecol()` and `usecol()` functions are both quite permissive with
 A particular color palette (e.g., `pal_seegruen`) can not only be displayed by providing it (as an object) but also by providing its name (i.e., `"pal_seegruen"`) or even an incomplete object name or name (i.e., `"seegruen"` or `seegruen`). 
 Hence, the following expressions all yield the same result: 
 
-```{r free-pal-args, fig.width = 6, fig.asp = .75, eval = FALSE}
+```{r free-pal-args, fig.width = 5, fig.asp = .75, eval = FALSE}
 seecol(pal_seegruen)
 seecol("pal_seegruen")
 seecol("seegruen")
@@ -213,14 +213,14 @@ Finally, specifying a value for `alpha` (in a range from 0 to 1) allows controll
 
 Using only a subset of colors:
 
-```{r use-subset, fig.width = 6, fig.height = 5, fig.align = 'center', collapse = TRUE}
+```{r use-subset, fig.width = 5, fig.height = 4, fig.align = 'center', collapse = TRUE}
 seecol("unikn_all", n = 4)
 seecol(pal_unikn, 4)
 ```
 
 Importantly, when using pre-defined color palettes of **unikn** but a value of `n` that is smaller than the length of the current color palette, `usecol` and `seecol` select a predefined subset of colors:
 
-```{r use-col-small-n, fig.width = 3.5, fig.height = 3, fig.align = 'center', collapse = TRUE, fig.show='hold'}
+```{r use-col-small-n, fig.width = 3, fig.height = 2.5, fig.align = 'center', collapse = TRUE, fig.show='hold'}
 barplot(1/sqrt(1:2), col = usecol(pal_seeblau, n = 2))
 barplot(1/sqrt(1:3), col = usecol(pal_seeblau, n = 3))
 ```
@@ -229,17 +229,17 @@ barplot(1/sqrt(1:3), col = usecol(pal_seeblau, n = 3))
 
 For values of `n` that are larger than the number of available colors in `pal`, the specified color palette is extended using `ColorRampPalette`:
 
-```{r use-superset-all, fig.width = 7, fig.height = 6, fig.align = 'center', collapse = TRUE}
+```{r use-superset-all, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
 seecol("all", n = 12)
 ```
 
-```{r use-superset, fig.width = 6, fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r use-superset, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
 seecol(pal_seeblau, 12)
 ```
 
 When using a color palette: 
 
-```{r use-col-big-n, fig.width = 6, fig.asp = .618, fig.align = 'center'}
+```{r use-col-big-n, fig.width = 5, fig.asp = .65, fig.align = 'center'}
 barplot(1/sqrt(1:11), col = usecol(pal_bordeaux, n = 11))
 ```
 
@@ -247,13 +247,13 @@ barplot(1/sqrt(1:11), col = usecol(pal_bordeaux, n = 11))
 
 By passing a vector to `pal`, we can concatenate 2 color palettes and connect them with a color (here: `"white"`) as the midpoint of a new color palette:  
 
-```{r combine-pals, fig.width = 6, fig.asp = .75, fig.align = 'center'}
+```{r combine-pals, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 seecol(pal = c(rev(pal_petrol), "white", pal_bordeaux))
 ```
 
 We can combine a set of colors and extend this palette by specifying an `n` argument that is larger than the length of the specified palette: 
 
-```{r combine-pals-n, fig.width = 6, fig.asp = .75, fig.align = 'center'}
+```{r combine-pals-n, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 seecol(pal = usecol(c(Karpfenblau, Seeblau, "gold"), n = 10))
 # Note, that redundant use of seecol and usecol shows HEX values as names.
 # seecol(pal = c(Karpfenblau, Seeblau, "gold"), n = 10)  # would work, but show no intermediate names
@@ -261,7 +261,7 @@ seecol(pal = usecol(c(Karpfenblau, Seeblau, "gold"), n = 10))
 
 These custom palettes can easily be used in a plot. For instance, we can define and use a subset of the `pal_unikn_pair` palette as follows: 
 
-```{r use-my-pair, fig.width = 6, fig.height = 4, fig.align = 'center'}
+```{r use-my-pair, fig.width = 5, fig.height = 4, fig.align = 'center'}
 my_pair <- seecol(pal_unikn_pair, n = 10)
 
 # Create data: 
@@ -278,13 +278,13 @@ Both `seecol()` and `usecol()` accept an `alpha` argument (in a range from\ 0 to
 
 Displaying a specific color palette at a medium opacity/transparency:
 
-```{r transparency1-pal, fig.width = 6, fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r transparency1-pal, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
 seecol(pal_unikn, alpha = 0.5)
 ```
 
 Setting opacity for a custom color palette: 
 
-```{r transparency-four, fig.width = 6, fig.height = 5, fig.align = 'center'}
+```{r transparency-four, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 four_cols <- usecol(c("steelblue", "gold", "firebrick", "forestgreen"), alpha = 2/3)
 
 seecol(four_cols, title = "Four named colors with added transparency")
@@ -292,7 +292,7 @@ seecol(four_cols, title = "Four named colors with added transparency")
 
 Setting opacity for comparing of multiple color palettes: 
 
-```{r transparency-all, fig.width = 6, fig.height = 5, fig.align = 'center'}
+```{r transparency-all, fig.width = 5, fig.height = 4, fig.align = 'center'}
 seecol("grad", alpha = 0.67, title = "Seeing color palettes with added transparency")
 ```
 
@@ -301,7 +301,7 @@ seecol("grad", alpha = 0.67, title = "Seeing color palettes with added transpare
 
 Suppose we want to compare a newly created color palette to existing color palettes. To achieve this, advanced users can use the `seecol()` function for displaying and comparing different custom palettes. When provided with a list of color palettes as the input to its `pal` argument, `seecol()` will show a _comparison_ of the inputs:
 
-```{r compare-custom-palettes, fig.width = 6, fig.height = 3, fig.align = 'center'}
+```{r compare-custom-palettes, fig.width = 5, fig.height = 3, fig.align = 'center'}
 # Define 2 palettes: 
 pal1 <- c(rev(pal_seeblau), "white", pal_bordeaux)
 pal2 <- usecol(c(Karpfenblau, Seeblau, "gold"), n = 10)
@@ -315,7 +315,7 @@ Palettes known to `seecol()` are labeled by their respective names.
 
 Labeling only custom palettes works by setting the `pal_names` argument to a character vector of appropriate length: 
 
-```{r set-custom-palette-names, fig.width = 6, fig.height = 3, fig.align = 'center'}
+```{r set-custom-palette-names, fig.width = 5, fig.height = 3, fig.align = 'center'}
 seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), 
        pal_names = c("my_pair", "blue_bord", "blue_yell"),
        title = "Labeling custom color palettes")
@@ -323,7 +323,7 @@ seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair),
 
 If the `pal_names` argument is specified and corresponds to the length of _all_ color palettes, the default names of all color palettes are overwritten by `pal_names`:
 
-```{r set-all-palette-names, fig.width = 6, fig.height = 3, fig.align = 'center'}
+```{r set-all-palette-names, fig.width = 5, fig.height = 3, fig.align = 'center'}
 seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), 
        pal_names = c("my_pair", "blue_bord", "blue_yell", "blue_black", "mix_pair"),
        title = "Comparing and labeling custom color palettes")
@@ -331,13 +331,13 @@ seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair),
 
 As before, we can use the `n`\ argument for obtaining shorter subsets of color palettes: 
 
-```{r subset-compare, fig.width = 6, fig.height = 3, fig.align = 'center'}
+```{r subset-compare, fig.width = 5, fig.height = 3, fig.align = 'center'}
 seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), n = 5)
 ```
 
 or larger values of\ `n` for extending color palettes: 
 
-```{r superset-compare, fig.width = 6, fig.height = 3, fig.align = 'center'}
+```{r superset-compare, fig.width = 5, fig.height = 3, fig.align = 'center'}
 seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), n = 15)
 ```
 
@@ -346,13 +346,13 @@ seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), n = 15)
 
 The `newpal()` function makes it easy to define new named color palettes: 
 
-```{r newpal-1, fig.width = 6, fig.height = 5, fig.align = 'center'}
+```{r newpal-1, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 col_flag <- c("#000000", "#dd0000", "#ffce00")  # source: www.schemecolor.com
 
 flag_de  <- newpal(col = col_flag,
                    names = c("black", "red", "gold"))
 
-seecol(flag_de, title = "Defining a flag_de color palette (www.schemecolor.com)")
+seecol(flag_de, title = "Defining a flag_de color palette")
 ```
 
 By default, `newpal()` returns the new color palette as a data frame. 
@@ -363,7 +363,7 @@ Setting `as_df = FALSE` returns a (named) vector.
 
 A common situation in R is that we want some particular shade of color (e.g., some sort of red), but also know that the color named "red" is _not_ the one we want. Instead, we would like to see all colors that contain "red" in its name. This is what `grepal()` is made for:
 
-```{r grepal-1, fig.width = 7, fig.height = 4, fig.align = 'center'}
+```{r grepal-1, fig.width = 6, fig.height = 4, fig.align = 'center'}
 grepal("red")  # get 27 names of colors() with "red" in their name
 
 seecol(grepal("red"))  # see all colors() with "red" in their name
@@ -380,7 +380,7 @@ length(grepal("^gr(a|e)y$")) # shades starting and ending with "gray" or "grey"
 By default, `grepal()` searches the vector of named colors `x = colors()` (provided by **grDevices**). 
 However, it also allows searching color palettes provided as data frames (with color names):
 
-```{r grepal-3, fig.width = 6, fig.height = 5, fig.align = 'center'}
+```{r grepal-3, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 grepal("see", pal_unikn)
 
 seecol(grepal("blau", pal_unikn_pref), title = "Shades of 'blau' in pal_unikn_pref")
@@ -391,7 +391,7 @@ seecol(grepal("blau", pal_unikn_pref), title = "Shades of 'blau' in pal_unikn_pr
 
 The following examples illustrate how plotting functions in R can use the **unikn** color palettes, as well as the `seecol()`, `usecol()`, `newpal()`, and `grepal()` functions. 
 
-### Plotting in **base** R 
+### Using colors in **base** R
 
 **Task:** Using **unikn** colors in a visualization created by **base** R graphics. 
 
@@ -404,7 +404,7 @@ plot(x = runif(99), y = runif(99), "p", pch = 16, cex = 4,
      main = "99 transparent dots", axes = FALSE, xlab = NA, ylab = NA)
 ```
 
-### Platting with **ggplot2**
+### Using colors in **ggplot2**
 
 **Task:** Using **unikn** colors in a visualization created by the **ggplot2** package.
 
@@ -455,11 +455,47 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
 
 <img src = "./../inst/pix/README-use_pal_ggplot2-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/>
 
+### Viewing and comparing color palettes 
+
+**Task:** View a color palette. 
+
+```{r seecol-example-1, fig.width = 5, fig.asp = .8, fig.align = 'center'}
+seecol(hcl.colors(10, "Vik"))
+```
+
+**Task:** Compare multiple color palettes.
+
+```{r seecol-example-2, fig.width = 6, fig.asp = 1.2, fig.align = 'center'}
+# Parameters:
+n_col <-  8   # colors in each palette
+n_pal <- 20   # length(hcl.pals())
+ptype <- NULL # c("diverging", "divergingx", "qualitative", "sequential")[4] 
+s_pal <- sample(x = hcl.pals(type = ptype), size = n_pal, replace = FALSE)
+
+# Initialize:
+# t_lbl <- paste0("See ", n_pal, " random ", ptype, " HCL color palettes (n = ", n_col, ")") 
+t_lbl <- paste0("See ", n_pal, " random HCL color palettes (n = ", n_col, ")") 
+l_pal <- vector("list", n_pal)  # lists of palettes
+
+# Loop:
+for (i in 1:n_pal){
+
+  l_pal[[i]] <- usecol(hcl.colors(n = n_col, palette = s_pal[i]))
+    
+}
+
+# See all palettes:
+seecol(pal = l_pal, 
+       pal_names = s_pal,
+       col_brd = "white", lwd_brd = 1,
+       title = t_lbl)
+```
+
 ### Creating a color palette 
 
 **Task:** Create a new color palette (with color names).
 
-```{r newpal-example, fig.width = 6, fig.asp=.9, fig.align = 'center'}
+```{r newpal-example, fig.width = 5, fig.asp = .8, fig.align = 'center'}
 color_google <- c("#4285f4", "#34a853", "#fbbc05", "#ea4335")
 
 names_google <- c("blueberry", "sea green", "selective yellow", "cinnabar")
@@ -542,7 +578,7 @@ The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de) provides
 Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
 As the [University of Freiburg](https://www.uni-freiburg.de) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
 
-```{r freiburg-cols, fig.width = 7, fig.asp = .618, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+```{r freiburg-cols, fig.width = 5, fig.asp = .8, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
 
 pal_freiburg_bluered <- c("#004a99", "#c1002a")
@@ -579,7 +615,7 @@ pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", 
 
 Once a new color palette has been defined (and is available in your current R environment), we can use the `seecol()` and `usecol()` functions to view, modify, and use the palette: 
 
-```{r freiburg-seecol, fig.width = 7, fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r freiburg-seecol, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
 seecol(pal_freiburg_info)            # view color palette
 # seecol(pal_freiburg_basic, n = 7)  # extend color palette
 # seecol(c(pal_freiburg_blue, "white", pal_freiburg_grey))  # mix color palette
@@ -603,7 +639,7 @@ The color scheme of [Princeton University](https://princeton.edu/) is easily rec
 
 These definitions suggest defining three separate versions of orange and corresponding color palettes: 
 
-```{r princeton-cols, fig.width = 6, fig.asp = .69, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+```{r princeton-cols, fig.width = 5, fig.asp = .8, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # HEX values for 3 shades of orange: 
 orange_basic <- "#E87722"  # Pantone 158 C
 orange_white <- "#E77500"  # orange on white
@@ -671,16 +707,16 @@ pal_mpg <- usecol(pal = c(mpg_green, "white", mpg_grey))
 Again, the easiest way of defining a corresponding color palette is by creating a named vector. 
 To allow for better color gradients, we insert the color `"white"` between the 2&nbsp;dedicated colors: 
 
-```{r mpg-pal-def, fig.width = 6, fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r mpg-pal-def, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
 pal_mpg <- c("#007367", "white", "#D0D3D4")
 names(pal_mpg) <- c("mpg green", "white", "mpg grey")
 ```
 
 As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `pal_mpg` color palette: 
 
-```{r mpg-seecol, fig.width = 6, fig.asp = .69, fig.align = 'center', collapse = TRUE}
+```{r mpg-seecol, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
 seecol(pal_mpg, 
-       col_brd = "black", lwd_brd = 2, 
+       col_brd = "black", lwd_brd = 1, 
        title = "Colors of the Max Planck Society")
 ```
 
@@ -688,7 +724,7 @@ seecol(pal_mpg,
 
 Once a new palette has been defined (and is available in your current R environment), the `seecol()` and `usecol()` functions allow comparing, scaling, and using them in the same fashion as the native **unikn** color palettes: 
 
-```{r compare-custom-pals, eval = TRUE, fig.width = 6, fig.asp = .50, fig.align = 'center', collapse = TRUE}
+```{r compare-custom-pals, eval = TRUE, fig.width = 5, fig.asp = .50, fig.align = 'center', collapse = TRUE}
 # Compare and extend custom color palettes:
 # seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1))
 
