--- a/vignettes/color_recipes.Rmd
+++ b/vignettes/color_recipes.Rmd
@@ -40,7 +40,6 @@ This vignette shows how various color-related tasks can be solved by the tools p
 <!-- Main color info: --> 
 (For a general introduction of the  **unikn** colors, color palettes, and color functions, see the vignette on [Colors and color functions](colors.html). The vignette on [text](text.html) provides information on creating text boxes and decorations.) 
 
-<!-- +++ here now +++: -->
 
 The following recipes illustrate how plotting functions in R can use the colors and color palettes provided by the **unikn** package. 
 Additional examples show how we can use the `seecol()`, `usecol()`, `newpal()`, and `grepal()` functions for solving color-related tasks. 
@@ -94,7 +93,7 @@ that is then provided as the `values` of the `scale_color_manual()` or `scale_fi
 
 2. Provide this palette as the `values` of the **ggplot2** functions `scale_color_manual()` or `scale_fill_manual()`. 
 
-```{r use-pal-ggplot2, eval = TRUE, fig.width = 6, fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r use-pal-ggplot2, eval = FALSE, fig.width = 6, fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # 0. Data: ---- 
 # Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/ 
 n <- 50
@@ -139,7 +138,7 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
 
 <!-- Image as link: -->
 
-<!-- <img src = "./../inst/pix/README-use_pal_ggplot2-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/> -->
+<img src = "./../inst/pix/README-use_pal_ggplot2-1.png" align = "center" width = "450px" alt = "pal_unikn" style = "border:10;"/>
 
 
 ## Viewing and comparing color palettes 
@@ -199,17 +198,18 @@ seecol(pal = l_pal,
 
 **Task:** Create a new color palette (with color names).
 
-For creating an new color palette (with dedicated color names), 
+The general steps for creating an new color palette (with dedicated color names) are: 
 
-1. Choose some colors (and their R color names, or as RGB/HEX/HCL values, e.g., at sites like <https://www.schemecolor.com>).  
+1. Choose some colors (and their R color names, or as RGB/HEX/HCL values, e.g., from sites like <https://www.schemecolor.com>). 
 
-2. Define the colors as an\ R vector (of type character).
+2. Define the colors as an\ R vector (of type character). 
 
-2. Define their names as a second R vector (of type character).
+3. Define their names as a second R vector (of type character). 
 
-3. Use the `newpal()` command to define the new color palette.
+4. Use the `newpal()` command to define the new color palette. 
 
-4. Use the `seepal()` command to inspect the new color palette.
+5. Use the `seepal()` command to inspect the new color palette. 
+
 
 ```{r newpal-example, fig.width = 5, fig.asp = .9, fig.align = 'center'}
 # 1. Choose colors:
@@ -301,12 +301,12 @@ B. Online documentation:  | [Release version](https://hneth.github.io/unikn/)   
 
 The following vignettes provide instructions and examples for using the **unikn** colors, color palettes, and functions: 
 
+<!-- Table of vignettes: -->
+
 <!-- unikn pkg logo and link: -->
 <a href = "https://github.com/hneth/unikn/">
 <img src = "../inst/pix/unikn.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/>
 </a> 
-
-<!-- Table of vignettes: -->
 
 | Nr.  | Vignette | Content    |        
 | ---: |:---------|:-----------|
